# multimodal-pdf-rag

./: .env.example  .gitignore  Dockerfile  README.md  code.ipynb  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
multimodal/: config.py  server.py
multimodal/db/: db_singleton.py  postgres_repository.py
multimodal/prompts/: multimodal_rag_prompt.py
multimodal/services/: chat_service.py  indexing_service.py  openai_service.py  postgres_db_service.py  qdrant_service.py
