[project]
name = "multimodal-pdf-rag"
version = "0.1.0"
description = "Multimodal PDF RAG API with FastAPI, OpenAI, Qdrant, and PostgreSQL memory."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.111.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "openai>=1.0.0",
    "pdf2image>=1.17.0",
    "pydantic>=2.7.0",
    "pypdf>=5.0.0",
    "python-multipart>=0.0.9",
    "qdrant-client>=1.9.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]
